@@ -161,7 +161,7 @@
 #define PBSE_NOTSNODE	15071		/* no time-shared nodes */
 #define PBSE_JOBTYPE	15072		/* wrong job type (batch or interactive) */
 #define PBSE_BADACLHOST	15073		/* bad entry in ACL host list */
-
+#define PBSE_MAXUSERQUED 15074		/* max number of jobs queued for user */
 /*
 ** 	Resource monitor specific
 */
