@@ -99,6 +99,7 @@ ATTR_enable,
 ATTR_fromroute,
 ATTR_killdelay,
 ATTR_maxque,
+ATTR_maxuserque,
 ATTR_maxgrprun,
 ATTR_maxrun,
 ATTR_maxuserrun,
